test/errors/opcode/opcode.rom
Error in `opcode.asm` on line 1: Unknown opcode `BLA`
